src/index.css
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
@import "tailwindcss";

@theme {
  --font-sans: "Rubik", sans-serif;

  --color-blue-950: hsl(229, 31%, 21%);
  --color-blue-600: hsl(231, 69%, 60%);
  --color-grey-600: hsl(228, 12%, 41%);
  --color-grey-50: hsl(0, 0%, 97%);
  --color-red-400: hsl(0, 94%, 66%);

  --spacing: 8px;

  --shadow-card: 0px 10px 20px -5px hsl(231, 58%,55%,0.2);
}

@utility text-preset-1 {
  @apply text-[30px] leading-[135%] font-medium;
  @media (min-width: 768px) {
    @apply text-[48px] leading-[110%] font-medium
  }
}

@utility text-preset-2 {
  @apply text-[32px] leading-[125%] -tracking-[0.1px] font-medium
}
@utility text-preset-2-mobile-medium {
  @apply text-[15px] leading-[200%] font-medium;
}

@utility text-preset-2-mobile-regular {
  @apply text-[15px] leading-[165%];

}

@utility text-preset-2-mobile-light {
  @apply text-[15px] leading-[200%] font-light;
}

@utility text-preset-3 {
  @apply text-[12px] leading-[300%] font-medium tracking-[5px];

  @media (min-width: 768px) {
    @apply text-[20px] leading-[120%] tracking-[0.25px]
  }
}

@utility text-preset-4 {
  @apply text-[10px] leading-[120%] font-medium tracking-[0.25px] italic;

  @media (min-width: 768px) {
    @apply text-[18px] leading-[155%] font-normal not-italic
  }
}

@utility text-preset-5 {
  @apply text-[16px] leading-[225%] tracking-[0.5px] font-light
}

@utility text-preset-6 {
  @apply text-[14px] leading-[200%] tracking-[0.25px] font-normal
}

@utility text-preset-6-medium {
  @apply text-[14px] leading-[200%] tracking-[0.25px] font-medium
}

@utility text-preset-6-semibold {
  @apply text-[14px] leading-[300%] tracking-[5px] font-semibold
}

@utility text-preset-7 {
  @apply text-[10px] leading-[120%] tracking-[0.25px] font-medium italic
}

@utility design-overlay {
  position: absolute;
  opacity: 0.25;
  pointer-events: none;
  z-index: 9999;
}

@layer base {
  button {
    border-radius: 5px;
    margin: 2px 0px;
    padding: 9px 15px;
    cursor: pointer;
  }
}

.btn-primary {
  @apply bg-blue-600 text-white
}

.btn-muted {
  @apply bg-gray-50 text-blue-950/75;
}

.btn-icon {
  @apply m-0 p-0
}

.btn-tab {
  @apply rounded-none m-0 p-[17px_10px]
}

.btn-accordion {
  @apply bg-transparent text-blue-950 rounded-none
}

.btn-accent {
  @apply bg-red-400 text-white
}

.btn-outline {
  @apply border-2 border-white text-white
}

